# amazon-books-coldstart

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yml  pyproject.toml  setup.py
data/08_reporting/: Books_report.html  Ratings_report.html  process_resusts_table.py  project_report.html  project_report.md  results_on_test.txt  results_on_validation.txt  test_results.txt
notebooks/: project_report.md
src/amazon-books-coldstart/: data_reader.py
src/amazon-books-coldstart/data-preprocessing/: data_reader.py  pandas_preprocessing.py
src/amazon-books-coldstart/data_preprocessing/: preprocess.ipynb  preprocess.py
src/amazon-books-coldstart/embeddings_creation/: text_embeddings.py
src/amazon-books-coldstart/models/: booksindex.py
src/amazon-books-coldstart/tests/: test.py
src/amazon_books_coldstart/: config.py
src/amazon_books_coldstart/data_preprocessing/: pandas_preprocessing.py
src/amazon_books_coldstart/data_stats/: Books_and_ratings_report.py
src/amazon_books_coldstart/embeddings_creation/: create_embeddings.py  text_embeddings.py
src/amazon_books_coldstart/evaluation/: Book_embedding_approach.py  Final_model_evaluation.py  Simple_approach.py  User_embeddings.py  User_embeddings2.py  User_embeddings3.py  results.txt  simple_approach.txt
src/amazon_books_coldstart/models/: Book_embedding_approach.py  Simple_approach.py  User_embeddings.py  User_embeddings2.py  User_embeddings3.py  booksindex.py  compute_embeddings.py  dataset.py  model.py  train.py
src/amazon_books_coldstart/tests/: test.py
